--- a/myfirstbook/edr_pp_viz.ipynb
+++ b/myfirstbook/edr_pp_viz.ipynb
@@ -271,6 +271,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
