--- a/myfirstbook/edr_pp_viz.ipynb
+++ b/myfirstbook/edr_pp_viz.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# EDR features comparison\n",
-    "## for project github.com/tsale/EDR-Telemetry"
+    "### Data from project github.com/tsale/EDR-Telemetry"
    ]
   },
   {
